--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-python-telegram-bot==13.7  
-requests==2.22.0
-openai==0.27.0
-python-dotenv==1.0.0 
-psycopg2
+python-telegram-bot==13.7
+openai
+python-dotenv
+ffmpeg-python
+six==1.16.0
+urllib3==1.26.16
