--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 python-telegram-bot==13.5
-openai
-python-dotenv
-ffmpeg-python
-six
-psycopg2-binary
+openai==1.3.5
+python-dotenv==1.0.1
+ffmpeg-python==0.2.0
+six==1.16.0
+psycopg2-binary==2.9.9
 urllib3==1.26.16
